# AdventOfCode

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  go.mod  main.go  mix.exs  package.json  settings.gradle.kts
2020/: README.md  package.json
2021/: .gitignore  README.md  main.go
2022/: README.md
2023/: README.md
Day1/: Challenge1.js  challenge2.js  challenge2.json
Day10/: ans2.js
Day11/: ans1.js
Day12/: ans1.js  ans2.js
Day13/: ans2.js
Day2/: ans1.js  data2.json
Day3/: ans1.js  data.json
Day4/: ans1.js  ans2.js
Day5/: ans1.js
Day7/: ans1.js  ans2.js
Day8/: ans1.js  ans2.js
Day9/: ans2.js
day1/: day1.go
day10/: part2.go  part2_test.go
day11/: part1.go  part2.go  utils.go
day12/: part_test.go  utils.go
day13/: part1_test.go
day14/: part1.go  part1_test.go
day15/: solve.go  utils.go
day16/: solve_test.go  utils.go
day17/: solve.go
day18/: part.go  utils.go
day2/: part2.go
day3/: part1.go
day4/: part1_test.go  part2.go
day5/: part1.go  part1_test.go  utils.go
day7/: part2.go  part2_test.go  utils.go
day8/: part1.go  part1_test.go  part2.go  part2_test.go  utils.go
day9/: part1.go  part2.go  part2_test.go  utils.go
src/: Day09.kt  Utils.kt  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  main.rs
test/: day_01_test.exs  day_02_test.exs  day_03_test.exs  day_04_test.exs  day_05_test.exs  day_06_test.exs  day_07_test.exs  day_08_test.exs  day_10_test.exs  day_11_test.exs  day_12_test.exs  (+2 more)
(+72 files in other folders)
