[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
if_chain = "1.0.2"
itertools = "0.10.5"
json = "0.12.4"
regex = "1.7.0"
rust-crypto = "0.2.36"

[dev-dependencies]
test-case = "2.2.2"
